tests/invalid/nonexistent_import.m
:- module nonexistent_import.

:- interface.

:- type foo == int.

:- import_module nonexistent.
